feat(subtitle-fetching): implement fetching and parsing of Bilibili subtitles
- Add fetchPlayerInfo function to retrieve subtitle metadata from player API
- Add fetchSubtitles function to fetch and parse subtitle JSON content
- Update init function to fetch subtitles on video pages and log data
- Enable access to subtitle timestamps and content for AI ad detection

--- a/manifest.json
+++ b/manifest.json
@@ -7,6 +7,10 @@
     "activeTab",
     "storage"
   ],
+  "host_permissions": [
+    "https://api.bilibili.com/*",
+    "https://aisubtitle.hdslb.com/*"
+  ],
   "content_scripts": [
     {
       "matches": ["*://*.bilibili.com/*"],
