feat(ad-skipper): implement Gemini AI ad detection and automatic skipping
- Integrate Google Gemini 2.5 Flash API for subtitle analysis
- Add webpack bundling for ES module support in content script
- Implement popup UI for API key management
- Add ad segment detection and timeupdate-based skipping
- Fix JSON parsing for Gemini markdown responses
- Update logging with [ad_skip] prefix
- All linting and tests pass

--- a/manifest.json
+++ b/manifest.json
@@ -11,10 +11,13 @@
     "https://api.bilibili.com/*",
     "https://aisubtitle.hdslb.com/*"
   ],
+  "action": {
+    "default_popup": "popup.html"
+  },
   "content_scripts": [
     {
       "matches": ["*://*.bilibili.com/*"],
-      "js": ["content.js"]
+      "js": ["content.bundle.js"]
     }
   ]
 }
