--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "Chrome extension to automatically skip ads in Bilibili videos using AI subtitle analysis",
   "main": "content.js",
   "scripts": {
-    "lint": "eslint content.js",
-    "lint:fix": "eslint content.js --fix",
+    "lint": "eslint content.js popup.js",
+    "lint:fix": "eslint content.js popup.js --fix",
     "test": "jest",
     "test:watch": "jest --watch",
-    "build": "echo 'Extension built successfully'",
+    "build": "webpack",
     "dev": "echo 'Development mode - load extension manually in Chrome'"
   },
   "keywords": [
@@ -21,15 +21,24 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@babel/preset-env": "^7.28.3",
     "eslint": "^8.57.0",
     "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0"
+    "jest-environment-jsdom": "^29.7.0",
+    "webpack": "^5.101.3",
+    "webpack-cli": "^6.0.1"
   },
   "jest": {
     "testEnvironment": "jsdom",
     "collectCoverageFrom": [
       "content.js"
     ],
-    "setupFilesAfterEnv": []
+    "setupFilesAfterEnv": [],
+    "transformIgnorePatterns": [
+      "node_modules/(?!@google)"
+    ]
+  },
+  "dependencies": {
+    "@google/genai": "^1.20.0"
   }
 }
